# ticket-ralph

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json  ticket-ralph-settings.json
agentdocs/: architecture.md
agents/: tr-code-review.md  tr-git-hygiene.md  tr-high-level-plan-confirm.md  tr-high-level-plan-fixer.md  tr-high-level-plan-review.md  tr-high-level-plan.md  tr-impl-review-fixer.md  tr-impl-review.md  tr-implementor.md  tr-plan-confirm.md  tr-plan-fixer.md  tr-plan-review.md  tr-plan.md  tr-qa-ci-cd.md  tr-qa-fixer.md  tr-qa-runner.md  tr-qa-tester.md  tr-qa.md  tr-software-engineer.md
docs/: architecture.md
fragments/agents/: code-review.md  git-hygiene.md  high-level-plan-confirm.md  high-level-plan-fixer.md  high-level-plan-review.md  high-level-plan.md  impl-review-fixer.md  impl-review.md  implementor.md  jira-tasks.md  plan-confirm.md  plan-fixer.md  plan-review.md  plan.md  qa-ci-cd.md  qa-fixer.md  qa-runner.md  qa-tester.md  qa.md  software-engineer.md
fragments/shared/: context7.md  explore.md  file-conventions.md  git-ops.md  jira-ops.md  plan-methodology.md  plan-sub-instructions.md  prd-progress-input.md  solid.md  (+12 more)
scripts/: compose.sh  qa.sh  story.sh  task-loop.sh  task.sh  ticket.sh
tests/: test_agent.py  test_cli.py  test_commands_qa.py  test_commands_task.py  test_commands_task_loop.py  test_commands_ticket.py  test_compose.py  test_config.py  test_exceptions.py  test_git.py  test_settings.py  test_sync.py  test_ticketing_init.py  test_ticketing_jira.py  test_ticketing_noop.py  test_utils.py
(+24 files in other folders)
